add stripe gradient

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-
       gtag('config', 'G-CR1M89QT9X');
     </script>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script src='gradient.js'></script>
   </body>
 </html>
